Fix publication button spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -565,6 +565,7 @@ footer.sticky-bottom {
           padding-right: 1rem;
           padding-top: 0.25rem;
           padding-bottom: 0.25rem;
+          margin-left: 0;
           &:hover {
             color: var(--global-theme-color);
             border-color: var(--global-theme-color);
@@ -572,11 +573,13 @@ footer.sticky-bottom {
         }
       }
       .badges {
+        padding-bottom: 0.5rem;
         span {
           display: inline-block;
           color: $black-color;
           height: 100%;
-          padding-left: 0.5rem;
+          // padding-left: 0.5rem;
+          padding-right: 0.5rem;
           vertical-align: middle;
           &:hover {
             text-decoration: underline;
